RESOLVED FIXED286993
[iOS] presentingApplicationBundleIdentifier is wrong in new web processes created after presentingApplicationAuditToken changes
https://bugs.webkit.org/show_bug.cgi?id=286993
Summary [iOS] presentingApplicationBundleIdentifier is wrong in new web processes cre...
Andy Estes
Reported 2025-02-03 21:56:18 PST
SSIA
Attachments
Andy Estes
Comment 1 2025-02-03 21:56:18 PST
Andy Estes
Comment 2 2025-02-03 22:03:34 PST
EWS
Comment 3 2025-02-04 13:19:28 PST
Committed 289822@main (0cf319253661): <https://commits.webkit.org/289822@main> Reviewed commits have been landed. Closing PR #39968 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.